kotlin-ide/idea/testData/compiler/asJava/lightClasses/compilationErrors/JvmPackageName.java
@kotlin.jvm.JvmPackageName(name = "a.b.c")
public final class JvmPackageNameKt {
    public static final void f() { /* compiled code */ }
}